General Updates (#10)
Some general needed updates.
